--- a/templates/index.html
+++ b/templates/index.html
@@ -223,7 +223,7 @@
                 </div>
             </div>
             <ul class="nav-links">
-                <li><a href="home.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="product_page.html">Product Page</a></li>
                 <li><a href="login.html">Login</a></li>
                 <li><a href="signup.html">Sign Up</a></li>
