--- a/templates/product_page.html
+++ b/templates/product_page.html
@@ -249,7 +249,7 @@
     <header>
         <nav>
             <ul class="nav-links">
-                <li><a href="home.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="product_page.html">Products</a></li>
                 <li><a href="login.html">Login</a></li>
                 <li><a href="signup.html">Sign Up</a></li>
